# ntru2

Project2/: CMakeLists.txt
Project2/Project2/: CMakeCache.txt  CMakeLists.txt  Makefile  Project2.vcxproj  Project2.vcxproj.filters  cmake_install.cmake  poly.c  pqNTRUSign.h  project2.c  rng.c  shred.c  shred.h  sign.c
Project2/Project2/Debug/Project2.tlog/: CL.write.1.tlog
Project2/Project2/x64/Debug/: vc141.idb
Project2/Project2/x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project2.lastbuildstate  Project2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project2/x64/Debug/: Project2.exp  Project2.ilk  Project2.lib
jnidemo_c/: CMakeLists.txt  com_zz_demo_JNIDemo.h
linux ntru/helloworld/: NTT.c  PQCgenKAT_sign.c  crypto_sha3_512.c  helloworld.c  ntru.h  param.h  pqNTRUSign.c  sign.c
linux ntru/helloworld/nbproject/: Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
linux ntru/ntrusign/: build.xml
linux ntru/ntrusign/nbproject/: build-impl.xml  genfiles.properties  project.properties
linux ntru/ntrusign/nbproject/private/: private.properties  private.xml
linux ntru/ntrusign/src/ntrusign/: Ntrusign.java  asu.java
ntru/java/linux/c╘┤┬ы╙ы╜╙┐┌/: DGS.c  Project2.c  crypto_hash_sha512.h  getout.h  helloworld.c  helloworld.h  misc.c  ntru.h  rng.c  shred.c  sign.c
ntru/java/linux/c╘┤┬ы╙ы╜╙┐┌/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ntru/java/win/Project2(c╘┤┬ы╙ы╜╙┐┌)/Project2/: PQCgenKAT_sign.c  Project2.vcxproj  Project2.vcxproj.filters  api.h  ntru.h  packing.c  project2.c  shred.h
ntru/java/win/ntrusign(java╡ў╙├)/nbproject/: project.properties  project.xml
ntru/js/linux/js linux c╘┤┬ы/: DGS.c  Project2.c  crypto_sha3_512.c  getout.c  helloword.h  helloworld.c  kk.c  ntru.h  packing.h  shred.c  sign.c
ntru/js/linux/js╡ў╙├/: index.js  package-lock.json  package.json  test.js
ntru/js/win/jsnt(js ╡ў╙├)/: index.js  package-lock.json  package.json  test.js
ntru/js/win/ntrusign/: ntrusign.sln
ntrusign/: CMakeCache.txt  CMakeLists.txt  Project2.sln  a.out
ntrusign/nbproject/private/: private.xml
ntrusign/src/ntrusign/: Ntrusign.java  asu.java
pqntrusign-nist-submission-rev/reference implementation/: CMakeLists.txt
pqntrusign-nist-submission-rev/reference implementation/Gaussian-1024/: PQCgenKAT_sign.c  PQCsignKAT_2604.rsp  api.h  makefile  sign.c
pqntrusign-nist-submission-rev/reference implementation/Uniform-1024/: PQCgenKAT_sign.c  PQCsignKAT_2604.rsp  api.h  makefile
pqntrusign-nist-submission-rev/reference implementation/common/: NTT.c  param.c  poly.h
(+61 files in other folders)
